--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/cloudnode-pro/hetzner-dns-client/issues"
   },
-  "homepage": "https://github.com/cloudnode-pro/hetzner-dns-client#readme"
+  "homepage": "https://github.com/cloudnode-pro/hetzner-dns-client#readme",
+  "devDependencies": {
+    "typescript": "^4.9.4"
+  }
 }
