--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/cloudnode-pro/hetzner-dns-client#readme",
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.0"
   }
 }
